{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 722,
  "lineage": "1f9c28e4-389b-1879-26b0-b74401e4ab84",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "cross-region-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-centralus-con/providers/Microsoft.Network/loadBalancers/cross_lb_centralus/frontendIPConfigurations/Fr_Pub_LBIP",
                "name": "Fr_Pub_LBIP",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-centralus-con/providers/Microsoft.Network/publicIPAddresses/pip_cr_lb"
              }
            ],
            "id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-centralus-con/providers/Microsoft.Network/loadBalancers/cross_lb_centralus",
            "location": "centralus",
            "name": "cross_lb_centralus",
            "resource_group_name": "rg-centralus-con",
            "sku": "Standard",
            "sku_tier": "Global"
          },
          "dependencies": [
            "azurerm_public_ip.pip_cr_lb",
            "azurerm_resource_group.rg-con",
            "random_id.dns-name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "region_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "region1",
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-centralus-con/providers/Microsoft.Network/loadBalancers/region-centralus-lb/frontendIPConfigurations/PublicIPAddress",
                "name": "PublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-centralus-con/providers/Microsoft.Network/publicIPAddresses/pip-centralus-lb"
              }
            ],
            "id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-centralus-con/providers/Microsoft.Network/loadBalancers/region-centralus-lb",
            "location": "centralus",
            "name": "region-centralus-lb",
            "resource_group_name": "rg-centralus-con",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_public_ip.pipr_lb",
            "azurerm_resource_group.rg-con",
            "random_id.dns-name"
          ]
        },
        {
          "index_key": "region2",
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-eastus2-con/providers/Microsoft.Network/loadBalancers/region-eastus2-lb/frontendIPConfigurations/PublicIPAddress",
                "name": "PublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-eastus2-con/providers/Microsoft.Network/publicIPAddresses/pip-eastus2-lb"
              }
            ],
            "id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-eastus2-con/providers/Microsoft.Network/loadBalancers/region-eastus2-lb",
            "location": "eastus2",
            "name": "region-eastus2-lb",
            "resource_group_name": "rg-eastus2-con",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_public_ip.pipr_lb",
            "azurerm_resource_group.rg-con",
            "random_id.dns-name"
          ]
        },
        {
          "index_key": "region3",
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-canadacentral-con/providers/Microsoft.Network/loadBalancers/region-canadacentral-lb/frontendIPConfigurations/PublicIPAddress",
                "name": "PublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-canadacentral-con/providers/Microsoft.Network/publicIPAddresses/pip-canadacentral-lb"
              }
            ],
            "id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-canadacentral-con/providers/Microsoft.Network/loadBalancers/region-canadacentral-lb",
            "location": "canadacentral",
            "name": "region-canadacentral-lb",
            "resource_group_name": "rg-canadacentral-con",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_public_ip.pipr_lb",
            "azurerm_resource_group.rg-con",
            "random_id.dns-name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "cross-region-lb-pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-centralus-con/providers/Microsoft.Network/loadBalancers/cross_lb_centralus/backendAddressPools/BackEndAddressPool",
            "loadbalancer_id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-centralus-con/providers/Microsoft.Network/loadBalancers/cross_lb_centralus",
            "name": "BackEndAddressPool"
          },
          "dependencies": [
            "azurerm_lb.cross-region-lb",
            "azurerm_public_ip.pip_cr_lb",
            "azurerm_resource_group.rg-con",
            "random_id.dns-name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "regional-lb-pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "region1",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-centralus-con/providers/Microsoft.Network/loadBalancers/region-centralus-lb/backendAddressPools/BackEndAddressPool",
            "loadbalancer_id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-centralus-con/providers/Microsoft.Network/loadBalancers/region-centralus-lb",
            "name": "BackEndAddressPool"
          },
          "dependencies": [
            "azurerm_lb.region_lb",
            "azurerm_public_ip.pipr_lb",
            "azurerm_resource_group.rg-con",
            "random_id.dns-name"
          ]
        },
        {
          "index_key": "region2",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-eastus2-con/providers/Microsoft.Network/loadBalancers/region-eastus2-lb/backendAddressPools/BackEndAddressPool",
            "loadbalancer_id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-eastus2-con/providers/Microsoft.Network/loadBalancers/region-eastus2-lb",
            "name": "BackEndAddressPool"
          },
          "dependencies": [
            "azurerm_lb.region_lb",
            "azurerm_public_ip.pipr_lb",
            "azurerm_resource_group.rg-con",
            "random_id.dns-name"
          ]
        },
        {
          "index_key": "region3",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-canadacentral-con/providers/Microsoft.Network/loadBalancers/region-canadacentral-lb/backendAddressPools/BackEndAddressPool",
            "loadbalancer_id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-canadacentral-con/providers/Microsoft.Network/loadBalancers/region-canadacentral-lb",
            "name": "BackEndAddressPool"
          },
          "dependencies": [
            "azurerm_lb.region_lb",
            "azurerm_public_ip.pipr_lb",
            "azurerm_resource_group.rg-con",
            "random_id.dns-name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool_address",
      "name": "cross-region-lb-pool-address",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "region2",
          "schema_version": 0,
          "attributes": {
            "backend_address_ip_configuration_id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-eastus2-con/providers/Microsoft.Network/loadBalancers/region-eastus2-lb/frontendIPConfigurations/PublicIPAddress",
            "backend_address_pool_id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-centralus-con/providers/Microsoft.Network/loadBalancers/cross_lb_centralus/backendAddressPools/BackEndAddressPool",
            "id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-centralus-con/providers/Microsoft.Network/loadBalancers/cross_lb_centralus/backendAddressPools/BackEndAddressPool/addresses/cross-region-lb-pool-address",
            "name": "cross-region-lb-pool-address"
          },
          "dependencies": [
            "azurerm_lb.cross-region-lb",
            "azurerm_lb.region_lb",
            "azurerm_lb_backend_address_pool.cross-region-lb-pool",
            "azurerm_public_ip.pip_cr_lb",
            "azurerm_public_ip.pipr_lb",
            "azurerm_resource_group.rg-con",
            "random_id.dns-name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "regional-lb-probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "region1",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-centralus-con/providers/Microsoft.Network/loadBalancers/region-centralus-lb/probes/probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-centralus-con/providers/Microsoft.Network/loadBalancers/region-centralus-lb",
            "name": "probe",
            "number_of_probes": 2,
            "port": 80,
            "probe_threshold": 1,
            "protocol": "Http",
            "request_path": "/"
          },
          "dependencies": [
            "azurerm_lb.region_lb",
            "azurerm_public_ip.pipr_lb",
            "azurerm_resource_group.rg-con",
            "random_id.dns-name"
          ]
        },
        {
          "index_key": "region2",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-eastus2-con/providers/Microsoft.Network/loadBalancers/region-eastus2-lb/probes/probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-eastus2-con/providers/Microsoft.Network/loadBalancers/region-eastus2-lb",
            "name": "probe",
            "number_of_probes": 2,
            "port": 80,
            "probe_threshold": 1,
            "protocol": "Http",
            "request_path": "/"
          },
          "dependencies": [
            "azurerm_lb.region_lb",
            "azurerm_public_ip.pipr_lb",
            "azurerm_resource_group.rg-con",
            "random_id.dns-name"
          ]
        },
        {
          "index_key": "region3",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-canadacentral-con/providers/Microsoft.Network/loadBalancers/region-canadacentral-lb/probes/probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-canadacentral-con/providers/Microsoft.Network/loadBalancers/region-canadacentral-lb",
            "name": "probe",
            "number_of_probes": 2,
            "port": 80,
            "probe_threshold": 1,
            "protocol": "Http",
            "request_path": "/"
          },
          "dependencies": [
            "azurerm_lb.region_lb",
            "azurerm_public_ip.pipr_lb",
            "azurerm_resource_group.rg-con",
            "random_id.dns-name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "cross-region-lb-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-centralus-con/providers/Microsoft.Network/loadBalancers/cross_lb_centralus/backendAddressPools/BackEndAddressPool"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-centralus-con/providers/Microsoft.Network/loadBalancers/cross_lb_centralus/frontendIPConfigurations/Fr_Pub_LBIP",
            "frontend_ip_configuration_name": "Fr_Pub_LBIP",
            "frontend_port": 80,
            "id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-centralus-con/providers/Microsoft.Network/loadBalancers/cross_lb_centralus/loadBalancingRules/LBRule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-centralus-con/providers/Microsoft.Network/loadBalancers/cross_lb_centralus",
            "name": "LBRule",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.cross-region-lb",
            "azurerm_lb_backend_address_pool.cross-region-lb-pool",
            "azurerm_public_ip.pip_cr_lb",
            "azurerm_resource_group.rg-con",
            "random_id.dns-name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "regionlb_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "region1",
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-centralus-con/providers/Microsoft.Network/loadBalancers/region-centralus-lb/backendAddressPools/BackEndAddressPool"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-centralus-con/providers/Microsoft.Network/loadBalancers/region-centralus-lb/frontendIPConfigurations/PublicIPAddress",
            "frontend_ip_configuration_name": "PublicIPAddress",
            "frontend_port": 80,
            "id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-centralus-con/providers/Microsoft.Network/loadBalancers/region-centralus-lb/loadBalancingRules/regionLBRule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-centralus-con/providers/Microsoft.Network/loadBalancers/region-centralus-lb",
            "name": "regionLBRule",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.region_lb",
            "azurerm_lb_backend_address_pool.regional-lb-pool",
            "azurerm_public_ip.pipr_lb",
            "azurerm_resource_group.rg-con",
            "random_id.dns-name"
          ]
        },
        {
          "index_key": "region2",
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-eastus2-con/providers/Microsoft.Network/loadBalancers/region-eastus2-lb/backendAddressPools/BackEndAddressPool"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-eastus2-con/providers/Microsoft.Network/loadBalancers/region-eastus2-lb/frontendIPConfigurations/PublicIPAddress",
            "frontend_ip_configuration_name": "PublicIPAddress",
            "frontend_port": 80,
            "id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-eastus2-con/providers/Microsoft.Network/loadBalancers/region-eastus2-lb/loadBalancingRules/regionLBRule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-eastus2-con/providers/Microsoft.Network/loadBalancers/region-eastus2-lb",
            "name": "regionLBRule",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.region_lb",
            "azurerm_lb_backend_address_pool.regional-lb-pool",
            "azurerm_public_ip.pipr_lb",
            "azurerm_resource_group.rg-con",
            "random_id.dns-name"
          ]
        },
        {
          "index_key": "region3",
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-canadacentral-con/providers/Microsoft.Network/loadBalancers/region-canadacentral-lb/backendAddressPools/BackEndAddressPool"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-canadacentral-con/providers/Microsoft.Network/loadBalancers/region-canadacentral-lb/frontendIPConfigurations/PublicIPAddress",
            "frontend_ip_configuration_name": "PublicIPAddress",
            "frontend_port": 80,
            "id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-canadacentral-con/providers/Microsoft.Network/loadBalancers/region-canadacentral-lb/loadBalancingRules/regionLBRule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-canadacentral-con/providers/Microsoft.Network/loadBalancers/region-canadacentral-lb",
            "name": "regionLBRule",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.region_lb",
            "azurerm_lb_backend_address_pool.regional-lb-pool",
            "azurerm_public_ip.pipr_lb",
            "azurerm_resource_group.rg-con",
            "random_id.dns-name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "region1",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-centralus-host/providers/Microsoft.Network/networkInterfaces/nic-centralus-host",
            "internal_domain_name_suffix": "kh3meszxrdze3a3cc5icnwk5vf.gx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "Internal",
                "primary": true,
                "private_ip_address": "10.10.0.4",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-centralus-con/providers/Microsoft.Network/virtualNetworks/vnet-centralus-conn/subnets/subnet-centralus-conn"
              }
            ],
            "location": "centralus",
            "name": "nic-centralus-host",
            "private_ip_address": "10.10.0.4",
            "private_ip_addresses": [
              "10.10.0.4"
            ],
            "resource_group_name": "rg-centralus-host"
          },
          "dependencies": [
            "azurerm_resource_group.rg-con",
            "azurerm_resource_group.rg-host",
            "azurerm_subnet.subnet_conn",
            "azurerm_virtual_network.vnet_conn"
          ]
        },
        {
          "index_key": "region2",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-eastus2-host/providers/Microsoft.Network/networkInterfaces/nic-eastus2-host",
            "internal_domain_name_suffix": "zlmke40wnrvezcw3h4pyzx5s4b.cx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "Internal",
                "primary": true,
                "private_ip_address": "10.20.0.4",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-eastus2-con/providers/Microsoft.Network/virtualNetworks/vnet-eastus2-conn/subnets/subnet-eastus2-conn"
              }
            ],
            "location": "eastus2",
            "name": "nic-eastus2-host",
            "private_ip_address": "10.20.0.4",
            "private_ip_addresses": [
              "10.20.0.4"
            ],
            "resource_group_name": "rg-eastus2-host"
          },
          "dependencies": [
            "azurerm_resource_group.rg-con",
            "azurerm_resource_group.rg-host",
            "azurerm_subnet.subnet_conn",
            "azurerm_virtual_network.vnet_conn"
          ]
        },
        {
          "index_key": "region3",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-canadacentral-host/providers/Microsoft.Network/networkInterfaces/nic-canadacentral-host",
            "internal_domain_name_suffix": "1qje2nh1oxue5ppjfl1eob2owb.ux.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "Internal",
                "primary": true,
                "private_ip_address": "10.30.0.4",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-canadacentral-con/providers/Microsoft.Network/virtualNetworks/vnet-canadacentral-conn/subnets/subnet-canadacentral-conn"
              }
            ],
            "location": "canadacentral",
            "name": "nic-canadacentral-host",
            "private_ip_address": "10.30.0.4",
            "private_ip_addresses": [
              "10.30.0.4"
            ],
            "resource_group_name": "rg-canadacentral-host"
          },
          "dependencies": [
            "azurerm_resource_group.rg-con",
            "azurerm_resource_group.rg-host",
            "azurerm_subnet.subnet_conn",
            "azurerm_virtual_network.vnet_conn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "region-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "region1",
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-centralus-con/providers/Microsoft.Network/loadBalancers/region-centralus-lb/backendAddressPools/BackEndAddressPool",
            "id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-centralus-host/providers/Microsoft.Network/networkInterfaces/nic-centralus-host/ipConfigurations/Internal|/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-centralus-con/providers/Microsoft.Network/loadBalancers/region-centralus-lb/backendAddressPools/BackEndAddressPool",
            "ip_configuration_name": "Internal",
            "network_interface_id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-centralus-host/providers/Microsoft.Network/networkInterfaces/nic-centralus-host"
          },
          "dependencies": [
            "azurerm_lb.region_lb",
            "azurerm_lb_backend_address_pool.regional-lb-pool",
            "azurerm_network_interface.nic_host",
            "azurerm_public_ip.pipr_lb",
            "azurerm_resource_group.rg-con",
            "azurerm_resource_group.rg-host",
            "azurerm_subnet.subnet_conn",
            "azurerm_virtual_network.vnet_conn",
            "random_id.dns-name"
          ]
        },
        {
          "index_key": "region2",
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-eastus2-con/providers/Microsoft.Network/loadBalancers/region-eastus2-lb/backendAddressPools/BackEndAddressPool",
            "id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-eastus2-host/providers/Microsoft.Network/networkInterfaces/nic-eastus2-host/ipConfigurations/Internal|/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-eastus2-con/providers/Microsoft.Network/loadBalancers/region-eastus2-lb/backendAddressPools/BackEndAddressPool",
            "ip_configuration_name": "Internal",
            "network_interface_id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-eastus2-host/providers/Microsoft.Network/networkInterfaces/nic-eastus2-host"
          },
          "dependencies": [
            "azurerm_lb.region_lb",
            "azurerm_lb_backend_address_pool.regional-lb-pool",
            "azurerm_network_interface.nic_host",
            "azurerm_public_ip.pipr_lb",
            "azurerm_resource_group.rg-con",
            "azurerm_resource_group.rg-host",
            "azurerm_subnet.subnet_conn",
            "azurerm_virtual_network.vnet_conn",
            "random_id.dns-name"
          ]
        },
        {
          "index_key": "region3",
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-canadacentral-con/providers/Microsoft.Network/loadBalancers/region-canadacentral-lb/backendAddressPools/BackEndAddressPool",
            "id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-canadacentral-host/providers/Microsoft.Network/networkInterfaces/nic-canadacentral-host/ipConfigurations/Internal|/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-canadacentral-con/providers/Microsoft.Network/loadBalancers/region-canadacentral-lb/backendAddressPools/BackEndAddressPool",
            "ip_configuration_name": "Internal",
            "network_interface_id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-canadacentral-host/providers/Microsoft.Network/networkInterfaces/nic-canadacentral-host"
          },
          "dependencies": [
            "azurerm_lb.region_lb",
            "azurerm_lb_backend_address_pool.regional-lb-pool",
            "azurerm_network_interface.nic_host",
            "azurerm_public_ip.pipr_lb",
            "azurerm_resource_group.rg-con",
            "azurerm_resource_group.rg-host",
            "azurerm_subnet.subnet_conn",
            "azurerm_virtual_network.vnet_conn",
            "random_id.dns-name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "region1",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-centralus-con/providers/Microsoft.Network/networkSecurityGroups/nag-centralus-conn",
            "location": "centralus",
            "name": "nag-centralus-conn",
            "resource_group_name": "rg-centralus-con",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg-con"
          ]
        },
        {
          "index_key": "region2",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-eastus2-con/providers/Microsoft.Network/networkSecurityGroups/nag-eastus2-conn",
            "location": "eastus2",
            "name": "nag-eastus2-conn",
            "resource_group_name": "rg-eastus2-con",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg-con"
          ]
        },
        {
          "index_key": "region3",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-canadacentral-con/providers/Microsoft.Network/networkSecurityGroups/nag-canadacentral-conn",
            "location": "canadacentral",
            "name": "nag-canadacentral-conn",
            "resource_group_name": "rg-canadacentral-con",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg-con"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsr_conn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "region1",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-centralus-con/providers/Microsoft.Network/networkSecurityGroups/nag-centralus-conn/securityRules/AllowInternetInbound",
            "name": "AllowInternetInbound",
            "network_security_group_name": "nag-centralus-conn",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "rg-centralus-con",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg-con"
          ]
        },
        {
          "index_key": "region2",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-eastus2-con/providers/Microsoft.Network/networkSecurityGroups/nag-eastus2-conn/securityRules/AllowInternetInbound",
            "name": "AllowInternetInbound",
            "network_security_group_name": "nag-eastus2-conn",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "rg-eastus2-con",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg-con"
          ]
        },
        {
          "index_key": "region3",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-canadacentral-con/providers/Microsoft.Network/networkSecurityGroups/nag-canadacentral-conn/securityRules/AllowInternetInbound",
            "name": "AllowInternetInbound",
            "network_security_group_name": "nag-canadacentral-conn",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "rg-canadacentral-con",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg-con"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip_cr_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "lb-global-ab1f8bc2",
            "fqdn": "lb-global-ab1f8bc2.centralus.cloudapp.azure.com",
            "id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-centralus-con/providers/Microsoft.Network/publicIPAddresses/pip_cr_lb",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.150.168.212",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "pip_cr_lb",
            "resource_group_name": "rg-centralus-con",
            "sku": "Standard",
            "sku_tier": "Global"
          },
          "dependencies": [
            "azurerm_resource_group.rg-con",
            "random_id.dns-name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pipr_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "region1",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "lb-centralus-ab1f8bc2",
            "fqdn": "lb-centralus-ab1f8bc2.centralus.cloudapp.azure.com",
            "id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-centralus-con/providers/Microsoft.Network/publicIPAddresses/pip-centralus-lb",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.89.132.75",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "pip-centralus-lb",
            "resource_group_name": "rg-centralus-con",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg-con",
            "random_id.dns-name"
          ]
        },
        {
          "index_key": "region2",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "lb-eastus2-ab1f8bc2",
            "fqdn": "lb-eastus2-ab1f8bc2.eastus2.cloudapp.azure.com",
            "id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-eastus2-con/providers/Microsoft.Network/publicIPAddresses/pip-eastus2-lb",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.254.9.34",
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "pip-eastus2-lb",
            "resource_group_name": "rg-eastus2-con",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg-con",
            "random_id.dns-name"
          ]
        },
        {
          "index_key": "region3",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "lb-canadacentral-ab1f8bc2",
            "fqdn": "lb-canadacentral-ab1f8bc2.canadacentral.cloudapp.azure.com",
            "id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-canadacentral-con/providers/Microsoft.Network/publicIPAddresses/pip-canadacentral-lb",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.233.29.213",
            "ip_version": "IPv4",
            "location": "canadacentral",
            "name": "pip-canadacentral-lb",
            "resource_group_name": "rg-canadacentral-con",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg-con",
            "random_id.dns-name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_conn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "region1",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.0.0/23"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-centralus-con/providers/Microsoft.Network/virtualNetworks/vnet-centralus-conn/subnets/subnet-centralus-conn",
            "name": "subnet-centralus-conn",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-centralus-con",
            "virtual_network_name": "vnet-centralus-conn"
          },
          "dependencies": [
            "azurerm_resource_group.rg-con",
            "azurerm_virtual_network.vnet_conn"
          ]
        },
        {
          "index_key": "region2",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.20.0.0/23"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-eastus2-con/providers/Microsoft.Network/virtualNetworks/vnet-eastus2-conn/subnets/subnet-eastus2-conn",
            "name": "subnet-eastus2-conn",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-eastus2-con",
            "virtual_network_name": "vnet-eastus2-conn"
          },
          "dependencies": [
            "azurerm_resource_group.rg-con",
            "azurerm_virtual_network.vnet_conn"
          ]
        },
        {
          "index_key": "region3",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.30.0.0/23"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-canadacentral-con/providers/Microsoft.Network/virtualNetworks/vnet-canadacentral-conn/subnets/subnet-canadacentral-conn",
            "name": "subnet-canadacentral-conn",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-canadacentral-con",
            "virtual_network_name": "vnet-canadacentral-conn"
          },
          "dependencies": [
            "azurerm_resource_group.rg-con",
            "azurerm_virtual_network.vnet_conn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg-assocation",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "region1",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-centralus-con/providers/Microsoft.Network/virtualNetworks/vnet-centralus-conn/subnets/subnet-centralus-conn",
            "network_security_group_id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-centralus-con/providers/Microsoft.Network/networkSecurityGroups/nag-centralus-conn",
            "subnet_id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-centralus-con/providers/Microsoft.Network/virtualNetworks/vnet-centralus-conn/subnets/subnet-centralus-conn"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg-con",
            "azurerm_subnet.subnet_conn",
            "azurerm_virtual_network.vnet_conn"
          ]
        },
        {
          "index_key": "region2",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-eastus2-con/providers/Microsoft.Network/virtualNetworks/vnet-eastus2-conn/subnets/subnet-eastus2-conn",
            "network_security_group_id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-eastus2-con/providers/Microsoft.Network/networkSecurityGroups/nag-eastus2-conn",
            "subnet_id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-eastus2-con/providers/Microsoft.Network/virtualNetworks/vnet-eastus2-conn/subnets/subnet-eastus2-conn"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg-con",
            "azurerm_subnet.subnet_conn",
            "azurerm_virtual_network.vnet_conn"
          ]
        },
        {
          "index_key": "region3",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-canadacentral-con/providers/Microsoft.Network/virtualNetworks/vnet-canadacentral-conn/subnets/subnet-canadacentral-conn",
            "network_security_group_id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-canadacentral-con/providers/Microsoft.Network/networkSecurityGroups/nag-canadacentral-conn",
            "subnet_id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-canadacentral-con/providers/Microsoft.Network/virtualNetworks/vnet-canadacentral-conn/subnets/subnet-canadacentral-conn"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg-con",
            "azurerm_subnet.subnet_conn",
            "azurerm_virtual_network.vnet_conn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet_conn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "region1",
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.10.0.0/21"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "4bc2fa51-8837-4ef2-83a2-17d026d95fad",
            "id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-centralus-con/providers/Microsoft.Network/virtualNetworks/vnet-centralus-conn",
            "location": "centralus",
            "name": "vnet-centralus-conn",
            "resource_group_name": "rg-centralus-con"
          },
          "dependencies": [
            "azurerm_resource_group.rg-con"
          ]
        },
        {
          "index_key": "region2",
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.20.0.0/21"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "7ba2d8ca-6c56-4c6a-8add-3f9f8cdff2f1",
            "id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-eastus2-con/providers/Microsoft.Network/virtualNetworks/vnet-eastus2-conn",
            "location": "eastus2",
            "name": "vnet-eastus2-conn",
            "resource_group_name": "rg-eastus2-con"
          },
          "dependencies": [
            "azurerm_resource_group.rg-con"
          ]
        },
        {
          "index_key": "region3",
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.30.0.0/21"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "344e12dc-75fb-4fe8-bde9-2af647078eb1",
            "id": "/subscriptions/b5effc5b-e366-4a91-8d78-89298bb79c8e/resourceGroups/rg-canadacentral-con/providers/Microsoft.Network/virtualNetworks/vnet-canadacentral-conn",
            "location": "canadacentral",
            "name": "vnet-canadacentral-conn",
            "resource_group_name": "rg-canadacentral-con"
          },
          "dependencies": [
            "azurerm_resource_group.rg-con"
          ]
        }
      ]
    }
  ]
}